fixed alignment on header items - kinda jank

--- a/src/style.css
+++ b/src/style.css
@@ -19,12 +19,11 @@
       'content content content'
       'content content content'
       'content content content';
-      border: 1px solid red;
+      font-family: 'Roboto Mono', monospace;
   }
 
   .header{
       grid-area: header;
-      border: 1px solid blue;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-areas: 'search df su';
@@ -39,14 +38,13 @@
     align-items: end;
     padding-left: 50px;
     padding-bottom: 25px; */
-    border: 1px solid red;
 }
 
 .title{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 48px;
+    font-size: 36px;
 }
 .forms{
     display: flex;
@@ -59,29 +57,31 @@
 }
 .display-info{
     grid-area: df;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    padding-bottom: 25px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
 }
 
 .unit-switcher{
     grid-area: su;
-    display:flex;
-    justify-content: center;
-    align-items: end;
-    padding-bottom: 25px;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+
 }
 
-      #switch-units{
-         
-          width: 20%;
-      }
+.unit-button{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#switch-units{
+    width: 20%;
+}
 
 
   .content{
       grid-area: content;
-      border: 1px solid yellow;
       display: grid;
       grid-template-columns: repeat(7, 1fr);
       grid-template-rows: repeat(3, 1fr);
@@ -124,6 +124,8 @@
      border-left: none;
      border-right: none; */
      height: 40px;
+     font-family: 'Roboto Mono', monospace;
+     width: 200px;
  }
 
  #search-for-weather{
@@ -143,4 +145,14 @@
  button{
      background-color: transparent;
      border: .5px solid black;
+     font-family: 'Roboto Mono', monospace;
+ }
+
+ #location{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 20px;
+     grid-row-start: 2;
+     grid-row-end: 3; 
  }
